Adds EasyRecyclerAdapters Adds selector for list items (ripple API21) Adds toolbar on MainActivity Solves bug related to SwipeRefreshLayout and RecyclerView

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     compile parent.ext.libSnackBars
     compile parent.ext.libRecyclerView
     compile parent.ext.libPicasso
+    compile parent.ext.libRecyclerAdapters
 
     compile project(':domain')
     compile project(':presentation')
