--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,8 @@ allprojects {
         libGson             = 'com.google.code.gson:gson:2.3.1'
         libOrmlite          = 'com.j256.ormlite:ormlite-android:4.48'
         libOkhttp           = 'com.squareup.okhttp:okhttp:2.2.0'
-        libMappers          = 'com.mobandme:android-transformer:1.0.1'
+        libMappers          = 'com.mobandme:android-transformer:1.1.0'
+        libMappersCompiler  = 'com.mobandme:android-transformer-compiler:1.1.0'
         libEventBus         = 'de.greenrobot:eventbus:2.4.0'
         libSnackBars        = 'com.nispok:snackbar:2.7.5'
         libRecyclerAdapters = 'com.github.cmc00022:easyrecycleradapters:1.0.2'
