--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ allprojects {
     libRecyclerAdapters = 'com.github.cmc00022:easyrecycleradapters:1.0.2'
     libPicasso = 'com.squareup.picasso:picasso:2.5.0'
     libFAB = 'com.melnykov:floatingactionbutton:1.2.0'
+    libMockito = 'org.mockito:mockito-all:2.0.2-beta'
+
   }
 
   repositories {
