--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'java'
 
 dependencies {
+  testCompile group: 'junit', name: 'junit', version: '4.6'
+  testCompile parent.ext.libMockito
   compile project(':domain')
 }
