--- a/data/build.gradle
+++ b/data/build.gradle
@@ -3,9 +3,14 @@ apply plugin: 'com.android.library'
 android {
   compileSdkVersion parent.ext.androidCompileSdkVersion
   buildToolsVersion parent.ext.androidBuildToolsVersion
+  defaultConfig {
+    minSdkVersion parent.ext.androidMinSdkVersion
+  }
 }
 
 dependencies {
+  testCompile group: 'junit', name: 'junit', version: '4.6'
+  testCompile parent.ext.libMockito
   compile project(':repository')
   compile parent.ext.libRetrofit
   compile parent.ext.libGson
