--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     mavenCentral()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:1.1.0'
+    classpath 'com.android.tools.build:gradle:1.1.0-rc1'
     classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.0'
     classpath 'com.github.dcendents:android-maven-plugin:1.2'
   }
