--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'java'
 
 sourceCompatibility = JavaVersion.VERSION_1_7
+targetCompatibility = JavaVersion.VERSION_1_7
 
 dependencies {
   compile project(':domain')
