--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'java'
 
+sourceCompatibility = JavaVersion.VERSION_1_7
+targetCompatibility = JavaVersion.VERSION_1_7
+
 dependencies {
   testCompile group: 'junit', name: 'junit', version: '4.6'
   testCompile parent.ext.libMockito
