--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,15 @@
 buildscript {
+  repositories {
+    mavenCentral()
+  }
+  
   dependencies {
+    classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
   }
 }
 
 apply plugin: 'com.android.application'
+apply plugin: 'com.jakewharton.hugo'
 
 def STRING = "String"
 def BOOLEAN = "boolean"
