--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,8 @@ allprojects {
     libPicasso = 'com.squareup.picasso:picasso:2.5.0'
     libFAB = 'com.melnykov:floatingactionbutton:1.2.0'
     libMockito = 'org.mockito:mockito-all:2.0.2-beta'
-
+    libCoordinator = 'me.panavtec:coordinator:1.0.0'
+    libCoordinatorCompiler = 'me.panavtec:coordinator-compiler:1.0.0'
   }
 
   repositories {
