--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -6,3 +6,16 @@ version = '1.0'
 repositories {
   mavenCentral()
 }
+
+allprojects {
+
+  ext {
+    // Libraries
+    libMockito = 'org.mockito:mockito-all:2.0.2-beta'
+  }
+
+  repositories {
+    jcenter()
+    mavenCentral()
+  }
+}
