--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -4,7 +4,8 @@ sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
 
 dependencies {
-  testCompile group: 'junit', name: 'junit', version: '4.6'
-  testCompile parent.ext.libMockito
   compile project(':domain')
+  
+  testCompile parent.ext.libJunit
+  testCompile parent.ext.libMockito
 }
