Same refactor of the previous commit but in the desktop app

--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -12,6 +12,7 @@ allprojects {
   ext {
     // Libraries
     libMockito = 'org.mockito:mockito-all:2.0.2-beta'
+    libJunit = 'junit:junit:4.12'
   }
 
   repositories {
