--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,7 @@ buildscript {
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:1.1.0'
-    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.0'
-    classpath 'com.github.dcendents:android-maven-plugin:1.2'
+    classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
   }
 }
 
@@ -41,8 +40,8 @@ allprojects {
     libPicasso = 'com.squareup.picasso:picasso:2.5.0'
     libFAB = 'com.melnykov:floatingactionbutton:1.2.0'
     libMockito = 'org.mockito:mockito-all:2.0.2-beta'
-    libCoordinator = 'me.panavtec:coordinator:1.0.0'
-    libCoordinatorCompiler = 'me.panavtec:coordinator-compiler:1.0.0'
+    libCoordinator = 'me.panavtec:coordinator:1.1.5'
+    libCoordinatorCompiler = 'me.panavtec:coordinator-compiler:1.1.5'
 
     libJunit = 'junit:junit:4.12'
   }
