--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':presentation', ':domain', ':repository', ':data'
+include ':app', ':presentation', ':domain', ':repository', ':data', ':presentation-compiler', ':presentation-common'
