--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -5,7 +5,7 @@ targetCompatibility = JavaVersion.VERSION_1_7
 
 dependencies {
   compile project(':domain')
-  
-  testCompile parent.ext.libJunit
-  testCompile parent.ext.libMockito
+
+  testCompile rootProject.ext.testDependencies.junit
+  testCompile rootProject.ext.testDependencies.mockito
 }
