--- a/data/build.gradle
+++ b/data/build.gradle
@@ -16,8 +16,7 @@ android {
 dependencies {
   compile project(':repository')
   compile rootProject.ext.dependencies.retrofit
-  compile rootProject.ext.dependencies.gson
-  compile rootProject.ext.dependencies.okhttp
+  compile rootProject.ext.dependencies.gsonConverter
   compile rootProject.ext.dependencies.ormlite
   compile rootProject.ext.dependencies.mappers
   provided rootProject.ext.dependencies.mappersCompiler
