--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,10 +6,9 @@ allprojects {
         dagger              : 'com.squareup.dagger:dagger:1.2.2',
         daggerCompiler      : 'com.squareup.dagger:dagger-compiler:1.2.2',
         butterknife         : 'com.jakewharton:butterknife:7.0.1',
-        retrofit            : 'com.squareup.retrofit:retrofit:1.9.0',
-        gson                : 'com.google.code.gson:gson:2.3.1',
+        retrofit            : 'com.squareup.retrofit:retrofit:2.0.0-beta2',
+        gsonConverter       : 'com.squareup.retrofit:converter-gson:2.0.0-beta2',
         ormlite             : 'com.j256.ormlite:ormlite-android:4.48',
-        okhttp              : 'com.squareup.okhttp:okhttp:2.2.0',
         mappers             : 'com.mobandme:android-transformer:1.1.1',
         mappersCompiler     : 'com.mobandme:android-transformer-compiler:1.1.1',
         snackBars           : 'com.nispok:snackbar:2.7.5',
