--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -9,7 +9,7 @@ targetCompatibility = JavaVersion.VERSION_1_7
 dependencies {
   compile project(':domain')
   compile 'me.panavtec:threaddecoratedview-common:1.5.1'
-  compile 'me.panavtec:threaddecoratedview-compiler:1.5.1'
+  apt 'me.panavtec:threaddecoratedview-compiler:1.5.1'
 
   testCompile rootProject.ext.testDependencies.junit
   testCompile rootProject.ext.testDependencies.mockito
