--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -7,6 +7,7 @@ allprojects {
         daggerCompiler      : 'com.squareup.dagger:dagger-compiler:1.2.2',
         butterknife         : 'com.jakewharton:butterknife:7.0.1',
         retrofit            : 'com.squareup.retrofit:retrofit:2.0.0-beta2',
+        loggingInterceptor  : 'com.squareup.okhttp:logging-interceptor:2.6.0',
         gsonConverter       : 'com.squareup.retrofit:converter-gson:2.0.0-beta2',
         ormlite             : 'com.j256.ormlite:ormlite-android:4.48',
         mappers             : 'com.mobandme:android-transformer:1.1.1',
