--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,29 +1,28 @@
 allprojects {
   ext {
-    dependencies = [
-        androidSupportv7    : 'com.android.support:appcompat-v7:23.1.0',
-        recyclerView        : 'com.android.support:recyclerview-v7:23.1.0',
-        dagger              : 'com.squareup.dagger:dagger:1.2.2',
-        daggerCompiler      : 'com.squareup.dagger:dagger-compiler:1.2.2',
-        butterknife         : 'com.jakewharton:butterknife:7.0.1',
-        retrofit            : 'com.squareup.retrofit:retrofit:2.0.0-beta2',
-        loggingInterceptor  : 'com.squareup.okhttp:logging-interceptor:2.6.0',
-        gsonConverter       : 'com.squareup.retrofit:converter-gson:2.0.0-beta2',
-        ormlite             : 'com.j256.ormlite:ormlite-android:4.48',
-        mappers             : 'com.mobandme:android-transformer:1.1.1',
-        mappersCompiler     : 'com.mobandme:android-transformer-compiler:1.1.1',
-        snackBars           : 'com.nispok:snackbar:2.7.5',
-        recyclerAdapters    : 'com.github.cmc00022:easyrecycleradapters:1.0.2',
-        picasso             : 'com.squareup.picasso:picasso:2.5.0',
-        fAB                 : 'com.melnykov:floatingactionbutton:1.2.0',
-        mockito             : 'org.mockito:mockito-all:2.0.2-beta',
-        coordinator         : 'me.panavtec:coordinator:1.1.5',
-        coordinatorCompiler : 'me.panavtec:coordinator-compiler:1.1.5',
-        threaddecoratedview : 'me.panavtec:threaddecoratedview-common:1.5.1',
-        threaddecoratedviewcompiler : 'me.panavtec:threaddecoratedview-compiler:1.5.1'
-    ]
+    dependencies = [androidSupportv7           : 'com.android.support:appcompat-v7:23.1.0',
+                    recyclerView               : 'com.android.support:recyclerview-v7:23.1.0',
+                    dagger                     : 'com.squareup.dagger:dagger:1.2.2',
+                    daggerCompiler             : 'com.squareup.dagger:dagger-compiler:1.2.2',
+                    butterknife                : 'com.jakewharton:butterknife:7.0.1',
+                    retrofit                   : 'com.squareup.retrofit:retrofit:2.0.0-beta2',
+                    loggingInterceptor         : 'com.squareup.okhttp:logging-interceptor:2.6.0',
+                    gsonConverter              : 'com.squareup.retrofit:converter-gson:2.0.0-beta2',
+                    ormlite                    : 'com.j256.ormlite:ormlite-android:4.48',
+                    mappers                    : 'com.mobandme:android-transformer:1.1.1',
+                    mappersCompiler            : 'com.mobandme:android-transformer-compiler:1.1.1',
+                    snackBars                  : 'com.nispok:snackbar:2.7.5',
+                    recyclerAdapters           : 'com.github.cmc00022:easyrecycleradapters:1.0.2',
+                    picasso                    : 'com.squareup.picasso:picasso:2.5.0',
+                    fAB                        : 'com.melnykov:floatingactionbutton:1.2.0',
+                    mockito                    : 'org.mockito:mockito-all:2.0.2-beta',
+                    coordinator                : 'me.panavtec:coordinator:1.1.5',
+                    coordinatorCompiler        : 'me.panavtec:coordinator-compiler:1.1.5',
+                    threaddecoratedview        : 'me.panavtec:threaddecoratedview-common:1.5.1',
+                    threaddecoratedviewcompiler: 'me.panavtec:threaddecoratedview-compiler:1.5.1']
 
-    testDependencies = [mockito: "org.mockito:mockito-core:1.9.5",
-                        junit  : "junit:junit:4.12"]
+    testDependencies = [mockito : "org.mockito:mockito-core:1.9.5",
+                        junit   : "junit:junit:4.12",
+                        hamcrest: 'org.hamcrest:hamcrest-library:1.3']
   }
 }
