--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,19 @@ dependencies {
   compile project(':domain')
   compile project(':presentation')
   compile project(':data')
+
+  androidTestCompile rootProject.ext.androidTestDependencies.runner
+  androidTestCompile rootProject.ext.androidTestDependencies.rules
+  androidTestCompile rootProject.ext.androidTestDependencies.espresso_core
+  androidTestCompile rootProject.ext.androidTestDependencies.espresso_contrib
+  androidTestCompile rootProject.ext.androidTestDependencies.espresso_intents
+
+}
+
+/*
+Resolves dependency versions across test and production APKs, specifically, transitive
+dependencies. This is required since Espresso internally has a dependency on support-annotations.
+*/
+configurations.all {
+  resolutionStrategy.force "com.android.support:support-annotations:$rootProject.supportLibraryVersion"
 }
