added custom script to travis I want to see the logs while building

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,6 @@ android:
 
   # Emulator for the tests
   - sys-img-armeabi-v7a-android-23
+script:
+  - ./gradlew --stacktrace lint
+  - ./gradlew --stacktrace connectedCheck
