Added travis.yml show lint errors from googlesamples

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,15 @@ android:
 
   # Emulator for the tests
   - sys-img-armeabi-v7a-android-23
+addons:
+  apt_packages:
+    - pandoc
+  artifacts:
+    paths:
+      - $(git ls-files -o | grep app/build/outputs | tr "\n" ":")
 script:
-  - ./gradlew --stacktrace lint
   - ./gradlew --stacktrace connectedCheck
+  # print build failure summary
+  - pandoc builder/build/reports/tests/index.html -t plain | sed -n '/^Failed tests/,/default-package/p'
+  # print lint results details
+  - for f in */app/build/outputs/lint-results.html; do pandoc $f -t plain; done
