Updated travis to use last android tools version

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: android
 sudo: false
 android:
   components:
-  - build-tools-23.0.1
+  - platform-tools
+  - tools
+  - build-tools-23.0.2
   - android-23
   
   # Additional components
