--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: android
 sudo: false
+jdk: oraclejdk7
 android:
   components:
   - platform-tools
@@ -14,12 +15,23 @@ android:
 
   # Emulator for the tests
   - sys-img-armeabi-v7a-android-23
+
 addons:
   apt_packages:
     - pandoc
   artifacts:
     paths:
       - $(git ls-files -o | grep app/build/outputs | tr "\n" ":")
+
+# Emulator Management: Create, Start and Wait
+# From: https://github.com/cotsog/android-tdd-playground/blob/master/.travis.yml
+before_script:
+  - echo no | android create avd --force --name test --target android-23 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window -gpu off -no-boot-anim &
+  - android-wait-for-emulator
+  - adb devices
+  - adb shell input keyevent 82 &
+
 after_failure:
   # print lint results details
   - for f in app/build/outputs/lint-results.html; do pandoc $f -t plain; done
