--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,14 @@ sudo: false
 jdk: oraclejdk7
 android:
   components:
-  - platform-tools
-  - tools
-  - build-tools-23.0.2
-  - android-23
-  
+  - build-tools-21.1.2
+  - android-21
+  - sys-img-armeabi-v7a-android-21
+
   # Additional components
   - extra-google-m2repository
   - extra-android-m2repository
   - extra-android-support
-
-  # Emulator for the tests
-  - sys-img-armeabi-v7a-android-23
 
 addons:
   apt_packages:
@@ -32,7 +28,7 @@ env:
 # From: https://github.com/cotsog/android-tdd-playground/blob/master/.travis.yml
 before_script:
   - echo no | android create avd --force --name test --target android-23 --abi armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window -gpu off -no-boot-anim &
+  - emulator -avd test -no-skin -no-audio -no-window -gpu off &
   - android-wait-for-emulator
   - adb devices
   - adb shell input keyevent 82 &
