--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,27 @@
 language: android
 sudo: false
 jdk: oraclejdk7
+env:
+  global:
+    # switch glibc to a memory conserving mode
+    - MALLOC_ARENA_MAX=2
+    # wait up to 10 minutes for adb to connect to emulator
+    - ADB_INSTALL_TIMEOUT=10
+
 android:
   components:
-  - build-tools-21.1.2
-  - android-21
-  - sys-img-armeabi-v7a-android-21
-
+  - platform-tools
+  - tools
+  - build-tools-23.0.2
+  - android-23
+  
   # Additional components
   - extra-google-m2repository
   - extra-android-m2repository
   - extra-android-support
+
+  # Emulator for the tests
+  - sys-img-armeabi-v7a-android-23
 
 addons:
   apt_packages:
@@ -19,16 +30,11 @@ addons:
     paths:
       - $(git ls-files -o | grep app/build/outputs | tr "\n" ":")
 
-env:
-  global:
-    # install timeout in minutes (2 minutes by default)
-    - ADB_INSTALL_TIMEOUT=8
-
 # Emulator Management: Create, Start and Wait
 # From: https://github.com/cotsog/android-tdd-playground/blob/master/.travis.yml
 before_script:
-  - echo no | android create avd --force --name test --target android-21 --abi armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window -gpu off &
+  - echo no | android create avd --force --name test --target android-23 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb devices
   - adb shell input keyevent 82 &
