AOSP workarround for APi 23 to build with travis

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ android {
 
   productFlavors {
     mock {
-      applicationId parent.ext.androidApplicationId + 'internal'
+      applicationId parent.ext.androidApplicationId + '.mock'
     }
   }
 
