--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,16 @@ before_script:
   - adb devices
   - adb shell input keyevent 82 &
 
+# There is an AOSP bug related with API 23, this is the workarround as comented here:
+# http://stackoverflow.com/questions/33403743/travis-ci-build-keeps-failing-with-shellcommandunresponsiveexception/33571279#33571279
+# If the issue is fixed, you can remove this script section
+script:
+  - ./gradlew assembleDebug -PdisablePreDex
+  - ./gradlew assembleDebugAndroidTest -PdisablePreDex
+  - adb install app/build/outputs/apk/app-mock-debug.apk
+  - adb install app/build/outputs/apk/app-mock-debug-androidTest-unaligned.apk
+  - adb shell am instrument -w me.panavtec.cleancontacts.mock.test/android.support.test.runner.AndroidJUnitRunner
+
 after_failure:
   # print lint results details
   - for f in app/build/outputs/lint-results.html; do pandoc $f -t plain; done
