--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
+apply from: rootProject.file('gradle/checkstyle.gradle')
 
 def STRING = "String"
 def BOOLEAN = "boolean"
