--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply from: rootProject.file('gradle/checkstyle.gradle')
 
 sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
