--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,7 +1,8 @@
 plugins {
-  id "net.ltgt.apt" version "0.3"
+  id "net.ltgt.apt" version "0.5"
 }
 apply plugin: 'java'
+apply from: rootProject.file('gradle/checkstyle.gradle')
 
 sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
