--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,7 @@ before_script:
   - ./gradlew check
   - echo no | android create avd --force --name test --target $ANDROID_TARGET --abi $ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
+  - chmod +x .buildscript/launchInstrumentationTests.sh
 
 # There is an AOSP bug related with API 23, this is the workarround as comented here:
 # http://stackoverflow.com/questions/33403743/travis-ci-build-keeps-failing-with-shellcommandunresponsiveexception/33571279#33571279
@@ -55,10 +56,9 @@ script:
   - adb shell input keyevent 82 &
   - adb install -r app/build/outputs/apk/app-mock-debug.apk
   - adb install -r app/build/outputs/apk/app-mock-debug-androidTest-unaligned.apk
-  # Launches unit tests
+  - # Launches unit tests
   - ./gradlew test --continue
-  # Launches androidTests
-  - adb shell 'am instrument -w me.panavtec.cleancontacts.mock.test/me.panavtec.cleancontacts.CleanContactsRunner 2>&1 ; exit $?'
+  - .buildscript/launchInstrumentationTests.sh
 
 after_failure:
   # print build failure summary
