--- a/.travis.yml
+++ b/.travis.yml
@@ -45,12 +45,10 @@ before_install:
 # Emulator Management: Create, Start and Wait
 # From: https://github.com/cotsog/android-tdd-playground/blob/master/.travis.yml
 before_script:
-  - echo ********** Android Targets **********
-  - android list target
-  - ./gradlew check
+  # - ./gradlew check
   - echo no | android create avd --force --name test --target $ANDROID_TARGET --abi $ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
-  - chmod +x .buildscript/launchInstrumentationTests.sh
+  # - chmod +x .buildscript/launchInstrumentationTests.sh
   - android-wait-for-emulator
   - adb devices
   - adb shell input keyevent 82 &
@@ -58,12 +56,13 @@ before_script:
 # There is an AOSP bug related with API 23, this is the workarround as comented here:
 # http://stackoverflow.com/questions/33403743/travis-ci-build-keeps-failing-with-shellcommandunresponsiveexception/33571279#33571279
 script:
-  - ./gradlew assembleDebug -PdisablePreDex
-  - ./gradlew assembleAndroidTest -PdisablePreDex
-  - adb install -r app/build/outputs/apk/app-mock-debug.apk
-  - adb install -r app/build/outputs/apk/app-mock-debug-androidTest-unaligned.apk
-  - ./gradlew test --continue
-  - ./gradlew connectedAndroidTest
+  # - ./gradlew assembleDebug -PdisablePreDex
+  # - ./gradlew assembleAndroidTest -PdisablePreDex
+  # - adb install -r app/build/outputs/apk/app-mock-debug.apk
+  # - adb install -r app/build/outputs/apk/app-mock-debug-androidTest-unaligned.apk
+  # - ./gradlew test --continue
+  - ./gradlew check --continue
+  - ./gradlew connectedAndroidTest --continue
   - ./gradlew jacocoFullReport
   # - .buildscript/launchInstrumentationTests.sh
 
