--- a/.travis.yml
+++ b/.travis.yml
@@ -49,9 +49,6 @@ before_script:
   - echo no | android create avd --force --name test --target $ANDROID_TARGET --abi $ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
   # - chmod +x .buildscript/launchInstrumentationTests.sh
-  - android-wait-for-emulator
-  - adb devices
-  - adb shell input keyevent 82 &
 
 # There is an AOSP bug related with API 23, this is the workarround as comented here:
 # http://stackoverflow.com/questions/33403743/travis-ci-build-keeps-failing-with-shellcommandunresponsiveexception/33571279#33571279
@@ -61,8 +58,11 @@ script:
   # - adb install -r app/build/outputs/apk/app-mock-debug.apk
   # - adb install -r app/build/outputs/apk/app-mock-debug-androidTest-unaligned.apk
   # - ./gradlew test --continue
-  - ./gradlew check --continue
-  - ./gradlew connectedAndroidTest --continue
+  - ./gradlew check --continue --stacktrace
+  - android-wait-for-emulator
+  - adb devices
+  - adb shell input keyevent 82 &
+  - ./gradlew connectedAndroidTest --continue --stacktrace
   - ./gradlew jacocoFullReport
   # - .buildscript/launchInstrumentationTests.sh
 
