--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
   compile project(':presentation')
   compile project(':data')
 
+  androidTestApt rootProject.ext.dependencies.daggerCompiler
   androidTestCompile rootProject.ext.testDependencies.mockito
   androidTestCompile rootProject.ext.androidTestDependencies.runner
   androidTestCompile rootProject.ext.androidTestDependencies.rules
