Assert recyclerview items instead of childcount

--- a/.travis.yml
+++ b/.travis.yml
@@ -51,9 +51,10 @@ script:
   - adb devices
   - adb shell input keyevent 82 &
   - ./gradlew connectedAndroidTest -PdisablePreDex --continue --stacktrace
-  - ./gradlew jacocoFullReport
+  - rm /home/travis/.gradle/caches/2.8/plugin-resolution/cache.properties.lock
 
 after_success:
+  - ./gradlew jacocoFullReport
   - codecov
 
 after_failure:
