--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,11 @@ script:
   - android-wait-for-emulator
   - adb devices
   - adb shell input keyevent 82 &
+  # First download the bash script
+  - wget http://imgur.com/tools/imgurbash.sh
+  - chmod a+x imgurbash.sh
+  - adb shell screencap -p | sed 's/\r$//' > bootscreen.png
+  - ./imgurbash.sh bootscreen.png
   - ./gradlew connectedAndroidTest -PdisablePreDex --continue --stacktrace
   - rm /home/travis/.gradle/caches/2.8/plugin-resolution/cache.properties.lock
 
